--- a/nablaweb/news/templates/news/news_detail.html
+++ b/nablaweb/news/templates/news/news_detail.html
@@ -1,9 +1,4 @@
 {% extends "base.html" %}
-{% load markup %}
-{% load humanize %}
-{% load comments %}
-{% load mediawiki_links %}
-{% load thumbnail %}
 
 {% block morehead %}
 
@@ -14,7 +9,9 @@
 
 {% endblock %}
 
+
 {% block title %}{{ news.headline }}{% endblock %}
+
 
 {% block content %}
 {% include "news/includes/text_content.html" %}
@@ -25,13 +22,6 @@
 {% block sidebar %}
 
 {% include "content/includes/meta.html" with content=news %}
-
-<div class="well" style="padding: 8px 0;">
-    <ul class="nav nav-list">
-        <li class="nav-header">Admin</li>
-        <li><a href="{% url "admin:news_news_change" news.id %}"><i class="icon-pencil"></i> Endre</a></li>
-        <li><a href="{% url "admin:news_news_delete" news.id %}"><i class="icon-trash"></i> Slett</a></li>
-    </ul>
-</div>
+{% include "news/includes/sidebar-admin.html" %}
 
 {% endblock %}
