Byttet ut django.contrib.markup med django-markdow-deux
django.contrib.markup er fjernet i Django 1.6 (deprecated i 1.5)
Fix #189

Dessverre fungerer ikke urlize nå. Det burde sikkert fikses,
muligens ved å bruke et annet bibliotek enn django-markdown-deux.

--- a/nablaweb/accounts/templates/accounts/view_member_profile.html
+++ b/nablaweb/accounts/templates/accounts/view_member_profile.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load thumbnail %}
-{% load markup %}
+{% load markdown_deux_tags %}
 {% load mediawiki_links %}
 
 {% block title %}Medlem: {{member.get_full_name }} {% endblock %}
