--- a/nablaweb/com/templates/com/com_details.html
+++ b/nablaweb/com/templates/com/com_details.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load mediawiki_links %}
-{% load markup %}
+{% load markdown_deux_tags %}
 {% load thumbnail %}
 {% load sekizai_tags %}
 
