--- a/nablaweb/jobs/templates/jobs/jobs_summary_include.html
+++ b/nablaweb/jobs/templates/jobs/jobs_summary_include.html
@@ -1,5 +1,5 @@
 {% load mediawiki_links %}
-{% load markup %}
+{% load markdown_deux_tags %}
 {% load classname %}
 {% load humanize %}
 {% load jobs_filters %}
