--- a/nablaweb/templates/comments/list.html
+++ b/nablaweb/templates/comments/list.html
@@ -1,6 +1,6 @@
 {% load humanize %}
 {% load thumbnail %}
-{% load markup %}
+{% load markdown_deux_tags %}
 {% load mediawiki_links %}
 
 {% for comment in comment_list %}
