--- a/nablaweb/templates/comments/preview.html
+++ b/nablaweb/templates/comments/preview.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 {% load mediawiki_links %}
 {% load thumbnail %}
-{% load markup %}
+{% load markdown_deux_tags %}
 
 {% block title %}{% trans "Preview your comment" %}{% endblock %}
 
