--- a/nablaweb/templates/flatpages/bn.html
+++ b/nablaweb/templates/flatpages/bn.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load mediawiki_links %}
 {% load bbcode %}
-{% load markup %}
+{% load markdown_deux_tags %}
 {% load flatpages %}
 {% load thumbnail %}
 
