--- a/nablaweb/accounts/templates/accounts/login.html
+++ b/nablaweb/accounts/templates/accounts/login.html
@@ -4,9 +4,10 @@
 {% block title %}Logg inn{% endblock %}
 
 {% block content %}
-<form method="post" action="/login/?next={{ next }}" />
+<form method="post" action="">
     {% csrf_token %}
-    {% bootstrap_form login_form %}
+    <input type='hidden' name='next' value='{{ next }}' />
+    {% bootstrap_form form %}
     <button class="btn btn-lg btn-primary" type="submit">Logg inn</button>
     <p><a href="{% url "password_reset" %}">Har du glemt passordet ditt?</a></p>
 </form>
