--- a/nablaweb/templates/base.html
+++ b/nablaweb/templates/base.html
@@ -143,12 +143,13 @@
         {% else %}
             <li><a href="{% url "accounts.views.user_register" %}">Registrer deg</a></li>
             <li class="dropdown">
-                <a href="#login" class="dropdown-toggle" data-toggle="dropdown">
+                <a href="{% url "auth_login" %}?next={{ request.path }}" class="dropdown-toggle" data-toggle="dropdown">
                     Logg inn
                     <span class="caret"></span>
                 </a>
-                <form class="dropdown-menu" action="/login/" method="post">
+                <form class="dropdown-menu" action="{% url "auth_login" %}" method="post">
                     {% csrf_token %}
+                    <input type='hidden' name='next' value='{{ request.path }}' />
                     <input class="form-control" type="text" placeholder="Brukernavn" name="username" />
                     <input class="form-control" type="password"  placeholder="Passord" name="password" />
                     <button class="submit btn btn-default btn-block" type="submit">Logg inn</button>
