Satt sidebarinfo.content|safe på forsiden (new_list.html)

--- a/nablaweb/news/templates/news/news_list.html
+++ b/nablaweb/news/templates/news/news_list.html
@@ -59,7 +59,7 @@
 
 {% block sidebar %}
 
-    {{ sidebarinfo.content|markdown }}
+    {{ sidebarinfo.content|safe }}
 
     {% include "events/includes/upcoming_events.html" %}
 
