Fikset progress-baren og facebook-ikonet
Byttet ut facebook-ikonet i repoet med et fra Font Awesome.

--- a/nablaweb/events/templates/events/event_detail.html
+++ b/nablaweb/events/templates/events/event_detail.html
@@ -15,7 +15,7 @@
     <div class="registrations">
         {% for registration in event.eventregistration_set.all %}
         {% with user=registration.user %}
-        <span class="label
+        <span class="label label-default
             {% if registration.is_waiting_place %} 
             waiting-place
             {% endif %}">
