--- a/nablaweb/templates/base.html
+++ b/nablaweb/templates/base.html
@@ -2,7 +2,7 @@
 {% load flatpages %}
 {% load sekizai_tags %}
 {% load bootstrap3 %}
-{% include "_bootstrap_include.html" %}
+{% include "includes/bootstrap_links.html" %}
 <!DOCTYPE html>
 <html lang="en">
 
