--- a/nablaweb/templates/comments/list.html
+++ b/nablaweb/templates/comments/list.html
@@ -19,7 +19,7 @@
     <div class="col-xs-10 text">
         <div class="info">
             <span class="author">
-                <a href="{% url "accounts.views.view_member_profile" comment.user.username %}">
+                <a href="{% url "member_profile" comment.user.username %}">
                     {% firstof comment.user.get_full_name comment.user.username %}
                 </a>
             </span>
