--- a/nablaweb/accounts/templates/accounts/edit_profile.html
+++ b/nablaweb/accounts/templates/accounts/edit_profile.html
@@ -8,8 +8,8 @@
 <div class="row">
     <div class="col-md-3">
         <img class="thumbnail" alt="avatar" width = "150" height ="150" 
-            {% if user.userprofile.avatar %}
-                src="{% thumbnail user.userprofile.avatar 150x150 %}"
+            {% if user.avatar %}
+                src="{% thumbnail user.avatar 150x150 %}"
             {% else %}
                 src="{{ STATIC_URL }}img/default_avatar.png"
             {%endif %}>
