--- a/nablaweb/templates/base.html
+++ b/nablaweb/templates/base.html
@@ -128,7 +128,7 @@
                 </a>
                 <ul class="dropdown-menu">
                     <li><a href="{% url "member_profile" user.username %}">Vis profil</a></li>
-                    <li><a href="{% url "accounts.views.edit_profile" %}">Endre profil</a></li>
+                    <li><a href="{% url "edit_profile" %}">Endre profil</a></li>
                     <li><a href="{% url "password_change" %}">Endre passord</a></li>
                     <li><a href="{% url "view_user_events" %}">Påmeldte arrangementer</a></li>
                     <li><a href="{% url "auth_logout" %}">Logg ut</a></li>
