--- a/nablaweb/templates/comments/list.html
+++ b/nablaweb/templates/comments/list.html
@@ -10,8 +10,8 @@
 <div class="row comment" id="c{{ comment.id }}">
 
     <img class="col-xs-2 thumbnail img-responsive" alt="avatar" width="150" height="150" src=
-        {% if comment.user.userprofile.avatar %}
-            "{% thumbnail comment.user.userprofile.avatar 150x150 %}"
+        {% if comment.user.avatar %}
+            "{% thumbnail comment.user.avatar 150x150 %}"
         {% else %}
             "{{ STATIC_URL }}img/default_avatar.png"
         {%endif %}>
