--- a/nablaweb/templates/comments/preview.html
+++ b/nablaweb/templates/comments/preview.html
@@ -14,8 +14,8 @@
 
         <div class="row comment" id="c{{ comment.id }}">
             <img class="col-xs-2 thumbnail img-responsive" alt="avatar" width="150" height="150" src=
-                {% if comment.user.userprofile.avatar %}
-                    "{% thumbnail user.userprofile.avatar 150x150 %}"
+                {% if comment.user.avatar %}
+                    "{% thumbnail user.avatar 150x150 %}"
                 {% else %}
                     "{{ STATIC_URL }}img/default_avatar.png"
                 {%endif %}>
