Fikset litt på avatar-thumbnailen

--- a/nablaweb/accounts/templates/accounts/edit_profile.html
+++ b/nablaweb/accounts/templates/accounts/edit_profile.html
@@ -7,7 +7,7 @@
 {% block content %} 
 <div class="row">
     <div class="col-md-3">
-        <img class="thumbnail" alt="avatar" width = "150" height ="150" 
+        <img class="thumbnail" alt="avatar"
             {% if user.avatar %}
                 src="{% thumbnail user.avatar 150x150 %}"
             {% else %}
