--- a/nablaweb/accounts/templates/accounts/view_member_profile.html
+++ b/nablaweb/accounts/templates/accounts/view_member_profile.html
@@ -10,7 +10,7 @@
 {% block content %}
 <div class="row">
     <div class="col-md-3">
-        <img class="thumbnail" alt="avatar" width="150" height="150"
+        <img class="thumbnail" alt="avatar"
             {% if member.avatar %}
                 src="{% thumbnail member.avatar 150x150 %}"
             {% else %}
