--- a/nablaweb/templates/base.html
+++ b/nablaweb/templates/base.html
@@ -141,7 +141,7 @@
             </li>
             {# end bruker-dropdown #}
         {% else %}
-            <li><a href="{% url "accounts.views.user_register" %}">Registrer deg</a></li>
+            <li><a href="{% url "user_registration" %}">Registrer deg</a></li>
             <li class="dropdown">
                 <a href="{% url "auth_login" %}?next={{ request.path }}" class="dropdown-toggle" data-toggle="dropdown">
                     Logg inn
