--- a/nablaweb/events/templates/events/event_administer.html
+++ b/nablaweb/events/templates/events/event_administer.html
@@ -14,16 +14,16 @@
   {% endif %}
 </p>
 
-<form action="" method="post">{% csrf_token %}
-
-  <select name="action">
-    {% for int_name, ext_name in actions %}
-    <option value="{{ int_name }}">{{ ext_name }}</option>
-    {% endfor %}
-  </select>
-  <input type="text" name="text" size="10" maxlength="10" />
-  <input type="submit" name="commit_changes" value="Utfør" />
-
+<form action="" method="post" class="form">{% csrf_token %}
+  <div class="form-inline">
+    <select name="action" class="form-control">
+      {% for int_name, ext_name in actions %}
+        <option value="{{ int_name }}">{{ ext_name }}</option>
+      {% endfor %}
+    </select>
+    <input class="form-control" type="text" name="text" size="10" maxlength="10" />
+    <input class="form-control" type="submit" name="commit_changes" value="Utfør" />
+  </div>
   {% with regs=registrations %}
 
   {% if regs %}
@@ -40,7 +40,7 @@
     <tbody>
     {% for registration in regs %}
     {% if registration.is_attending_place %}
-    <tr bgcolor="#D0FFD0">
+    <tr class="success">
       <td>{{ registration.number }}</td>
       <td>{{ registration.user.get_full_name }}</td>
       <td>{{ registration.user.get_class_number }}</td>
@@ -51,7 +51,7 @@
 
     {% for registration in regs %}
     {% if registration.is_waiting_place %}
-    <tr bgcolor="#FFD0D0">
+    <tr class="warning">
       <td>{{ registration.number }}</td>
       <td>{{ registration.user.get_full_name }}</td>
       <td>{{ registration.user.get_class_number }}</td>
