Fixed a few bugs: - Margins - Labels - and more

--- a/nablaweb/events/templates/events/event_detail.html
+++ b/nablaweb/events/templates/events/event_detail.html
@@ -18,7 +18,7 @@
         <span class="label label-default
             {% if registration.is_waiting_place %} 
             waiting-place
-            {% endif %}">
+            {% endif %}" style="display: inline-block;">
 
             {% if user.get_full_name %}
                  {{ user.get_full_name }}
