--- a/static/css/default.css
+++ b/static/css/default.css
@@ -22,14 +22,28 @@
     }
 
     header {
-        margin-bottom: 5px;
+        margin-bottom: 15px;
         overflow: hidden;    /* clear floats */
     }
+
+    #samarbeidspartner-logo {
+        height: 50px;
+        width: auto;
+        margin-right: 30px;
+    }
+
     header img { width: 200px; }
     aside h3 { margin-top: 15px; }
     aside h3:first-child { margin-top: 0; }
 
-    form.dropdown-menu { padding: 5px; }
+    form.dropdown-menu {
+        padding: 15px;
+    }
+
+    form.dropdown-menu input {
+        width: 15em;
+        margin-bottom: 15px;
+    }
 
     h2 { margin-bottom: 5px; }
     h3 { margin-bottom: 5px; }
@@ -174,6 +188,7 @@
     form#searchtop {
         margin-bottom: 0px;
         margin-top: 15px; /* Logohøyde minus høyden på formen */
+        width: 200px;
     }
 
 /* Endringer i Bootstrap-farger */
