--- a/nablaweb/templates/base.html
+++ b/nablaweb/templates/base.html
@@ -75,7 +75,7 @@
     {# navigasjonslenker #}
     <ul class="nav navbar-nav">
         <li><a href="/">Hjem</a></li>
-        <li><a href="{% url "event_list" %}">Arrangement</a></li>
+        <li><a href="{% url "event_list" %}">Kalender</a></li>
         <li><a href="{% url "jobs_list" %}">Karriere</a></li>
         <li><a href="http://wiki.nabla.no/">Wiki</a></li>
 
