--- a/nablaweb/jobs/templates/jobs/jobs_list.html
+++ b/nablaweb/jobs/templates/jobs/jobs_list.html
@@ -24,6 +24,6 @@
         <hr>
     {% endfor %}
 {% else %}
-    <p>Vi har for øyeblikket ingen stillingsannonser</p>
+    <p>Vi har for øyeblikket ingen stillingsannonser.</p>
 {% endif %}
 {% endblock content %}
