--- a/nablaweb/bedpres/templates/bedpres/bedpres_detail.html
+++ b/nablaweb/bedpres/templates/bedpres/bedpres_detail.html
@@ -15,7 +15,7 @@
     {% endif %}
     <div class="registrations">
         {% for user in bedpres.get_users_attending %}
-        <span class="label">
+        <span class="label label-default">
             {% if user.get_full_name %}
                  {{ user.get_full_name }}
             {% else %}
