Under info på en bedpress vises nå hvilke trinn den er åpen for

--- a/nablaweb/bedpres/templates/bedpres/bedpres_detail.html
+++ b/nablaweb/bedpres/templates/bedpres/bedpres_detail.html
@@ -32,7 +32,7 @@
 
 {% block sidebar %}
 
-{% include "events/includes/info.html" with event=bedpres %}
+{% include "bedpres/includes/info.html" with event=bedpres %}
 {% include "content/includes/meta.html" with content=bedpres %}
 {% include "bedpres/includes/sidebar-admin.html" %}
 
