--- a/nablaweb/events/templates/events/includes/info.html
+++ b/nablaweb/events/templates/events/includes/info.html
@@ -58,6 +58,8 @@
 
     <!-- Påmeldingsfrist -->
     {% if event.registration_deadline %}
+    {% block open_for %}
+    {% endblock %}
     <tr>
         <td>Påmeldingsfrist</td>
         <td>
